fix horizontal scroll bug on higher resolutions

--- a/src/sass/base/_page.scss
+++ b/src/sass/base/_page.scss
@@ -15,6 +15,15 @@ body {
 	background-color: $main-gray;
 }
 
+html {
+	overflow-y: hidden;
+}
+
+body {
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
 section, footer {
   padding: 50px 10vw;
 }
